hotdrinks/newingress_hotdrinks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotdrinksingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required for hotdrinks apps'
spec:
  rules:
  - host: "www.hotdrinks.com"
    http:
      paths:
      - path: "/tea"
        pathType: Prefix
        backend:
          service:
            name: tea
            port: 
              number: 80    
      - path: "/coffee"
        pathType: Prefix
        backend:
          service:
            name: coffee
            port: 
              number: 80                
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
